# SanGuoAI

./: README.md  app.py  config.py  config.yaml  pyproject.toml
core/: engine.py  models.py  sanguosha.py
data/: favorites.json  sanguo.txt
static/: index.css  index.html  index.js  sanguosha.js
vector_store/embedding-3_cs500_co50/: default__vector_store.json  docstore.json  index_store.json
