[project]
name = "aigc-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.139.0",
  "ipykernel",
  "jieba>=0.42.1",
  "llama-index>=0.14.23",
  "llama-index-llms-zhipuai>=0.5.0",
  "matplotlib>=3.11.0",
  "openai>=2.45.0",
  "openpyxl>=3.1.5",
  "pandas>=3.0.3",
  "python-multipart>=0.0.32",
  "pyyaml>=6.0.3",
  "scikit-learn>=1.9.0",
  "uvicorn>=0.51.0",
]
